apps/production/headscale/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: headscale
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
